tests/baselines/reference/typeOfThisInInstanceMember.errors.txt
==== tests/cases/compiler/typeOfThisInInstanceMember.ts (1 errors) ====
    class C {
        x = this;
        foo() {
            return this;
        }
        constructor(x: number) {
            var t = this;
            t.x;
            t.y;
            t.z;
              ~
!!! typeOfThisInInstanceMember.ts(10,11): error TS2094: The property 'z' does not exist on value of type 'C'.
            var r = t.foo();
        }
    
        get y() {
            return this;
        }
    }
    
    var c: C;
    // all ok
    var r = c.x;
    var ra = c.x.x.x;
    var r2 = c.y;
    var r3 = c.foo();
    var rs = [r, r2, r3];
    
    rs.forEach(x => {
        x.foo;
        x.x;
        x.y;
    });